fix: make the API work