@@ -2,30 +2,33 @@ package com.ny.spring.service.impl;
 
 import com.ny.spring.dto.TestDto;
 import com.ny.spring.service.TestService;
+import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
-import reactor.core.publisher.Mono;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Service
 public class TestServiceImpl implements TestService {
     private final WebClient webClient = WebClient.builder().baseUrl("https://jsonplaceholder.typicode.com").build();
 
-    @Override
-    public List<TestDto> get(int page, int size) {
-
-        Mono<List<TestDto>> resp = webClient.get()
-                .uri("/post")
+    public List<TestDto> get(int page, int pageSize) {
+        TestDto[] postsArray = webClient.get()
+                .uri("/posts")
                 .retrieve()
-                .bodyToFlux(TestDto.class)
-                .collectList();
+                .bodyToMono(TestDto[].class)
+                .block();
 
-        List<TestDto> testDtos = resp.block();
 
-        List<TestDto> filteredData = testDtos.stream()
-                .skip((page - 1) * size)
-                .limit(size)
-                .toList();
+        assert postsArray != null;
+        List<TestDto> allPosts = Arrays.stream(postsArray)
+                .map(post -> TestDto.create(post.getId(), post.getTitle()))
+                .collect(Collectors.toList());
 
-        return filteredData;
+        int fromIndex = (page - 1) * pageSize;
+        int toIndex = Math.min(fromIndex + pageSize, allPosts.size());
+
+        return allPosts.subList(fromIndex, toIndex);
     }
 }
